Include webpack and webpack-cli

--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/kalquiza/webpack-env/issues"
   },
-  "homepage": "https://github.com/kalquiza/webpack-env#readme"
+  "homepage": "https://github.com/kalquiza/webpack-env#readme",
+  "dependencies": {
+    "webpack": "^5.3.1",
+    "webpack-cli": "^4.1.0"
+  }
 }
