--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "example-app",
   "version": "1.0.0",
   "description": "A basic production environment for front-end development built with Webpack",
+  "private": true,
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
