--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A basic production environment for front-end development built with Webpack",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config webpack.prod.js"
   },
   "repository": {
     "type": "git",
