--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "babel-loader": "^8.1.0",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.1.0"
   }
