--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server/app.js",
-    "build-prod": "webpack --config webpack.prod.js",
+    "build-prod": "webpack --config ./webpack.prod.js",
     "build-dev": "webpack serve --config ./webpack.dev.js"
   },
   "repository": {
