--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A basic production environment for front-end development built with Webpack",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node src/server/app.js",
     "build-prod": "webpack --config ./webpack.prod.js",
     "build-dev": "webpack serve --config ./webpack.dev.js"
@@ -23,8 +23,9 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
+    "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.12.7",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
@@ -33,6 +34,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-webpack-plugin": "^2.3.0",
     "html-webpack-plugin": "^4.5.0",
+    "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.1",
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0",
