--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.1.5",
-    "eslint": "^7.13.0",
+    "eslint": "^7.15.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.21.5",
     "eslint-webpack-plugin": "^2.3.0",
     "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
